Lab01/k8s/01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "nginx"
  namespace: default
  labels:
    app: "nginx"
    owner: "Denisse"
spec:
  containers:
  - name: nginx
    image: "nginx:alpine"
