Lab01/k8s/12-PvcDeployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/daemonset/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab01-deployment-pvc
  labels:
    app: lab01
spec:
  selector:
    matchLabels:
      app: lab01
  replicas: 3
  template:
    metadata:
      labels:
        app: lab01
    spec:
      containers:
      - name: lab01
        image: "rolandop/lab01:14"
        volumeMounts:
          - mountPath: /var/Lab/logs
            name: logs
        ports:
        - containerPort: 80
          name: http
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: lab01-pvc
