Lab01/k8s/14-PodConfigMap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-configmap
  labels:
    app: lab01
spec:
  containers:
  - name: lab01
    image: "rolandop/lab01:15"
    volumeMounts:
      - mountPath: /var/Lab/logs
        name: logs
      - mountPath: /var/Lab/props
        name: props
    ports:
    - containerPort: 80
      name: http
  volumes:
    - name: logs
      emptyDir: {} 
    - name: props
      configMap:
        name: lab01-config
        items:
        - key: "lab.properties"
          path: "lab.properties"
