Lab01/k8s/16-PodSecret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secret
  labels:
    app: lab01
spec:
  containers:
  - name: lab01
    image: "rolandop/lab01:15"
    volumeMounts:
      - mountPath: /var/Lab/logs
        name: logs    
    ports:
    - containerPort: 80
      name: http
  volumes:
    - name: logs
      emptyDir: {}
