Lab01/k8s/06-service-clusterClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab01
spec:
  ports:
  - port: 80
    targetPort: 80
    
  selector:
    app: lab01
