Lab01/k8s/07-service-clusterNodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab01
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
  selector:
    app: lab01
